; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_reiserfs.c_grub_reiserfs_get_key_v2_type.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_reiserfs.c_grub_reiserfs_get_key_v2_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_reiserfs_key = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@GRUB_REISERFS_STAT = common dso_local global i32 0, align 4
@GRUB_REISERFS_ANY = common dso_local global i32 0, align 4
@GRUB_REISERFS_DIRECTORY = common dso_local global i32 0, align 4
@GRUB_REISERFS_DIRECT = common dso_local global i32 0, align 4
@GRUB_REISERFS_INDIRECT = common dso_local global i32 0, align 4
@GRUB_REISERFS_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_reiserfs_key*)* @grub_reiserfs_get_key_v2_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_reiserfs_get_key_v2_type(%struct.grub_reiserfs_key* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.grub_reiserfs_key*, align 8
  %4 = alloca i64, align 8
  store %struct.grub_reiserfs_key* %0, %struct.grub_reiserfs_key** %3, align 8
  %5 = load %struct.grub_reiserfs_key*, %struct.grub_reiserfs_key** %3, align 8
  %6 = getelementptr inbounds %struct.grub_reiserfs_key, %struct.grub_reiserfs_key* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @grub_le_to_cpu64(i32 %9)
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = lshr i64 %11, 60
  %13 = trunc i64 %12 to i32
  switch i32 %13, label %24 [
    i32 0, label %14
    i32 15, label %16
    i32 3, label %18
    i32 2, label %20
    i32 1, label %22
  ]

14:                                               ; preds = %1
  %15 = load i32, i32* @GRUB_REISERFS_STAT, align 4
  store i32 %15, i32* %2, align 4
  br label %26

16:                                               ; preds = %1
  %17 = load i32, i32* @GRUB_REISERFS_ANY, align 4
  store i32 %17, i32* %2, align 4
  br label %26

18:                                               ; preds = %1
  %19 = load i32, i32* @GRUB_REISERFS_DIRECTORY, align 4
  store i32 %19, i32* %2, align 4
  br label %26

20:                                               ; preds = %1
  %21 = load i32, i32* @GRUB_REISERFS_DIRECT, align 4
  store i32 %21, i32* %2, align 4
  br label %26

22:                                               ; preds = %1
  %23 = load i32, i32* @GRUB_REISERFS_INDIRECT, align 4
  store i32 %23, i32* %2, align 4
  br label %26

24:                                               ; preds = %1
  %25 = load i32, i32* @GRUB_REISERFS_UNKNOWN, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %24, %22, %20, %18, %16, %14
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i64 @grub_le_to_cpu64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
